--- a/slides/11/11.md
+++ b/slides/11/11.md
@@ -26,7 +26,7 @@ Let $⇉A ∈ ℂ^{N×M}$ be an $N×M$ matrix.
   $$⇉A →v = λ →v.$$
 
 ~~~
-- If $⇉A ∈ ℝ^{N×N}$ is a real symmetric matrix, than it has $N$ real
+- If $⇉A ∈ ℝ^{N×N}$ is a real symmetric matrix, then it has $N$ real
   eigenvalues and $N$ real eigenvectors, which can be chosen to be _orthonormal_,
   and we can express $⇉A$ using the **eigenvalue decomposition**
   $$⇉A = ⇉V^T ⇉Λ ⇉V,$$
